Organised RESTful API (Only Users)
