# backend/api_v1/authapp/serializers.py
@@ -1,29 +1,124 @@
-from django.contrib.auth import authenticate
+from django.contrib.auth import authenticate, get_user_model
 from django.core.exceptions import ObjectDoesNotExist
-from rest_framework import serializers
+
+from rest_framework import serializers, mixins
+from rest_framework.reverse import reverse
 
 from api_v1.authapp import errorcodes
 from api_v1.exceptions import UniteamsAPIException
-from authapp.models import UniteamsUser
+from authapp.models import UserProfile
+
+User = get_user_model()
 
 
-class UniteamsUsersSerializer(serializers.ModelSerializer):
-    # token = serializers.CharField(max_length=512, write_only=True)
-    #
-    # def validate_token(self, value):
-    #     model_class = self.Meta.model
-    #     user = model_class.objects.filter(token=value)
-    #     print(user)
-    #     if not model_class.objects.filter(token=value).exists():
-    #         raise UniteamsAPIException(**errorcodes.ERR_TOKEN_NOT_SEARCH_USER)
-    #     if len(value) < 3 or len(value) > 512:
-    #         print(len(value), value)
-    #         raise UniteamsAPIException(**errorcodes.ERR_WRONG_TOKEN)
-    #     return value
+class UserSerializer(serializers.ModelSerializer):
+    id = serializers.IntegerField(read_only=True)
+    email = serializers.CharField(read_only=True)
+    username = serializers.CharField(read_only=True)
+    links = serializers.SerializerMethodField('get_links')
 
     class Meta:
-        model = UniteamsUser
-        fields = ['token']
+        model = User
+        fields = ['id', 'email', 'username', 'links']
+        read_only_fields = ['id', 'email', 'username']
+
+    def get_links(self, obj):
+        request = self.context['request']
+        pk = obj.get('id')
+        return {
+            'self': reverse('api-v1:auth:user-detail', kwargs={'pk': pk}, request=request)
+        }
+
+    def create(self, validated_data):
+        user = User.objects.create_user(**validated_data)
+        user.generate_activation_key()
+        return user
+
+
+class UserProfileSerializer(mixins.UpdateModelMixin, serializers.ModelSerializer):
+    user_id = serializers.IntegerField(read_only=True)
+    first_name = serializers.CharField(read_only=True)
+    last_name = serializers.CharField(read_only=True)
+    middle_name = serializers.CharField(read_only=True)
+    gender = serializers.CharField(read_only=True)
+    position = serializers.CharField(read_only=True)
+    links = serializers.SerializerMethodField('get_links')
+
+
+    class Meta:
+        model = UserProfile
+        fields = ['user_id', 'first_name', 'last_name', 'middle_name', 'gender', 'position', 'links']
+
+    def get_links(self, obj):
+        request = self.context['request']
+        pk = self.context.get('pk')
+        return {
+            'self': reverse('api-v1:auth:user-detail', kwargs={'pk': pk}, request=request),
+            'users': reverse('api-v1:auth:users', request=request)
+        }
+    #
+    # def validate(self, data):
+    #     # pk = self.context.get('pk')
+    #     user_profile = data
+    #     return user_profile
+
+
+
+
+
+class UserListSerializer(serializers.ListSerializer):
+    child = UserSerializer()
+    links = serializers.SerializerMethodField('get_links')
+
+    class Meta:
+        model = User
+        fields = ['child', 'links']
+
+    def get_links(self):
+        request = self.context['request']
+        return {
+            'self': reverse('api-v1:auth:users', request=request)
+        }
+
+    def validate(self, data):
+        print(data)
+        return data
+
+
+class UserRegisterSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = User
+        fields = ['username', 'email', 'password']
+
+    def create(self, validated_data):
+        user = User.objects.create_user(**validated_data)
+        user.generate_activation_key()
+        return user
+
+
+class UserDetailSerializer(serializers.ModelSerializer):
+    first_name = serializers.CharField(read_only=True)
+    links = serializers.SerializerMethodField(read_only=True)
+
+    class Meta:
+        model = UserProfile
+        fields = ['first_name', 'links']
+
+    # def validate(self, data):
+    #     return data
+
+    def validate(self, data):
+        user = User.objects.get(pk=data.get('pk'))
+        user_profile = user.get_user_profile()
+        return {'first_name': user_profile.first_name}
+
+    def get_links(self, obj):
+        request = self.context['request']
+        pk = obj.get('pk')
+        return {
+            'self': reverse('api-v1:auth:user-detail', kwargs={'pk': pk}, request=request),
+            'users': reverse('api-v1:auth:users', request=request)
+        }
 
 
 class RegistrationSerializer(serializers.ModelSerializer):
@@ -49,18 +144,18 @@ class RegistrationSerializer(serializers.ModelSerializer):
         return value
 
     class Meta:
-        model = UniteamsUser
+        model = User
 
         fields = ['username', 'email', 'password']
 
     def create(self, validated_data):
 
-        user = UniteamsUser.objects.create_user(**validated_data)
+        user = User.objects.create_user(**validated_data)
         user.generate_activation_key()
         return user
 
 
-class LoginSerializer(serializers.Serializer):
+class TokenSerializer(serializers.Serializer):
     username = serializers.CharField(write_only=True)
     password = serializers.CharField(write_only=True)
     token = serializers.CharField(max_length=255, read_only=True)
@@ -75,18 +170,18 @@ class LoginSerializer(serializers.Serializer):
             raise UniteamsAPIException(**errorcodes.ERR_WRONG_PASSWORD)
 
         try:
-            user = UniteamsUser.objects.get(username=username)
+            user = User.objects.get(username=username)
         except ObjectDoesNotExist:
             raise UniteamsAPIException(**errorcodes.ERR_WRONG_LOGIN_OR_PASSWRD)
-        if not user.is_active:
-            raise UniteamsAPIException(**errorcodes.ERR_USER_IS_NOT_ACTIVE)
+        else:
+            if not user.is_active:
+                raise UniteamsAPIException(**errorcodes.ERR_USER_IS_NOT_ACTIVE)
 
         user = authenticate(username=username, password=password)
         if user is None:
             raise UniteamsAPIException(**errorcodes.ERR_WRONG_LOGIN_OR_PASSWRD)
-
         return {
-            'access_token': user.token,
+            'token': user.token,
             "token_type": "Bearer",
         }
 
@@ -102,16 +197,14 @@ class VerifySerializer(serializers.Serializer):
         if email is None or activation_key is None:
             raise UniteamsAPIException(**errorcodes.ERR_WRONG_ACTIVATION_KEY)
         try:
-            user = UniteamsUser.objects.get(email=email, activation_key=activation_key)
+            user = User.objects.get(email=email)
         except ObjectDoesNotExist:
             raise UniteamsAPIException(**errorcodes.ERR_USER_NOT_FOUND)
         else:
             if user.is_active:
                 raise UniteamsAPIException(**errorcodes.ERR_USER_ALREADY_ACTIVATED)
+            if user.activation_key != activation_key:
+                raise UniteamsAPIException(**errorcodes.ERR_WRONG_ACTIVATION_KEY)
             if user.is_activation_key_expired:
                 raise UniteamsAPIException(**errorcodes.ERR_ACTIVATION_KEY_EXPIRED)
-
-        return {
-            'email': user.email,
-            'activation_key': user.activation_key
-        }
+        return True
