# backend/api_v1/authapp/views.py
@@ -1,39 +1,93 @@
-from django.core.mail import EmailMessage
-from django.urls import reverse
-
-from rest_framework import status, permissions
+from django.contrib.auth import get_user_model
+from rest_framework import status, mixins
+from rest_framework.decorators import permission_classes, authentication_classes
+from rest_framework.generics import UpdateAPIView
+from rest_framework.permissions import IsAdminUser, AllowAny, IsAuthenticated
 from rest_framework.response import Response
 from rest_framework.views import APIView
+from rest_framework.viewsets import ModelViewSet
 
-from authapp.models import UniteamsUser
-from api_v1.authapp.renderers import (RegistrationJSONRenderer, UserJSONRenderer, )
-from api_v1.authapp.serializers import (RegistrationSerializer, LoginSerializer, UniteamsUsersSerializer,
-                                        VerifySerializer)
-
+from authapp.models import UniteamsUser, UserProfile
+from api_v1.authapp.renderers import UserJSONRenderer
+from api_v1.authapp.serializers import RegistrationSerializer, TokenSerializer, UserSerializer, VerifySerializer, \
+    UserDetailSerializer, UserRegisterSerializer, UserListSerializer, UserProfileSerializer
 from api_v1.authapp.backends import JWTAuthentication
-from uniteams import settings
+
+User = get_user_model()
 
 
-class ListUsersAPIView(APIView):
-    authentication_classes = [JWTAuthentication]
-    permission_classes = [permissions.IsAdminUser]
-    serializer_class = UniteamsUsersSerializer
+class UsersAPIView(APIView):
+    queryset = User.objects.order_by(User.USERNAME_FIELD)
 
+    @permission_classes((IsAdminUser,))
+    @authentication_classes((JWTAuthentication,))
     def get(self, request):
-        username = request.data.get('username', '')
-        token = request.data.get('token', '')
-        user = {'username': username, 'token': token}
-        serializer = self.serializer_class(data=user)
+        users = [{'id': user.id, 'username': user.username, 'email': user.email} for user in self.queryset.all()]
+        serializer = UserListSerializer(data=users, context={'request': request})
         if serializer.is_valid(raise_exception=True):
-            usernames = [
-                {'id': user.id, 'username': user.username, 'email': user.email} for user in UniteamsUser.objects.all()
-            ]
-            return Response(usernames, status=status.HTTP_200_OK)
+            return Response(serializer.data, status=status.HTTP_200_OK)
+
+    @permission_classes((AllowAny,))
+    def post(self, request):
+        username = request.data.get('username', '')
+        email = request.data.get('email', '')
+        password = request.data.get('password', '')
+        user = {'username': username, 'email': email, 'password': password}
+        serializer = UserRegisterSerializer(data=user)
+
+        if serializer.is_valid(raise_exception=True):
+            serializer.save()
+            user = UniteamsUser.objects.get(username=username)
+            send_status = user.receive_activation_key()
+
+            if send_status:
+                message = f'Registration complete. Activate your account to use it. ' \
+                    f'Email with an activation key was successful sent to {user.email}'
+            else:
+                message = f'Registration complete. But activation key was not send.'
+
+            return Response({'message': message}, status=status.HTTP_200_OK)
+
+
+class UserDetailAPIView(UpdateAPIView):
+    queryset = UserProfile.objects.all().select_related('user')
+    serializer_class = UserProfileSerializer
+    lookup_field = 'user__id'
+
+    @authentication_classes((JWTAuthentication,))
+    @permission_classes((IsAuthenticated,))
+    def get(self, request, pk):
+        data = {'pk': pk}
+        serializer = UserProfileSerializer(data=data,
+                                           context={'request': request, 'pk': pk})
+        if serializer.is_valid(raise_exception=True):
+            return Response(serializer.data, status=status.HTTP_200_OK)
+
+    @authentication_classes((JWTAuthentication,))
+    @permission_classes((IsAuthenticated,))
+    def put(self, request, *args, **kwargs):
+        self.kwargs.update({'user__id': self.kwargs.get('pk')})
+        return self.update(request, args, kwargs)
+
+    def update(self, request, *args, **kwargs):
+        print(request.data)
+        instance = self.get_object()
+        instance.first_name = request.data.get('first_name', '')
+        instance.last_name = request.data.get('last_name', '')
+        instance.middle_name = request.data.get('middle_name', '')
+        instance.gender = request.data.get('gender', '')
+        instance.position = request.data.get('position', '')
+        instance.save()
+        serializer = self.serializer_class(instance,
+                                           data=request.data,
+                                           context={'request': request, 'pk': self.kwargs.get('pk')})
+        if serializer.is_valid(raise_exception=True):
+            return Response(serializer.data)
 
 
 class RegistrationAPIView(APIView):
-    permission_classes = (permissions.AllowAny,)
-    renderer_classes = (RegistrationJSONRenderer,)
+    permission_classes = (AllowAny,)
+    renderer_classes = (UserJSONRenderer,)
     serializer_class = RegistrationSerializer
 
     def post(self, request):
@@ -58,11 +112,11 @@ class RegistrationAPIView(APIView):
             return Response({'message': message}, status=status.HTTP_200_OK)
 
 
-class LoginAPIView(APIView):
-    permission_classes = (permissions.AllowAny,)
+class TokenAPIView(APIView):
     renderer_classes = (UserJSONRenderer,)
-    serializer_class = LoginSerializer
+    serializer_class = TokenSerializer
 
+    @permission_classes((AllowAny,))
     def post(self, request):
         username = request.data.get('username', '')
         password = request.data.get('password', '')
@@ -73,9 +127,9 @@ class LoginAPIView(APIView):
 
 
 class VerifyAPIView(APIView):
-    permission_classes = (permissions.AllowAny,)
     serializer_class = VerifySerializer
 
+    @permission_classes((AllowAny,))
     def get(self, request):
         data = request.GET
         email = data.get('email', '')
@@ -90,4 +144,3 @@ class VerifyAPIView(APIView):
             else:
                 message = f'User {user.username} activation failed'
             return Response({'message': message}, status=status.HTTP_200_OK)
-
